--- a/render.yaml
+++ b/render.yaml
@@ -5,3 +5,5 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn server:app
     plan: free
+
+apt-get update && apt-get install -y tesseract-ocr
